fdo#63680 SwTxtCursor::GetCrsrOfst: don't pass reference to a temporary

This was a situation similar to
d0d295af530e7dc1379a878ba5854e28eae250ad. Unfortunately just changing
SwTxtSizeInfo's pTxt to an OUString copy doesn't work, as we still have
code that relies on that being a pointer only.

Change-Id: I202d7e6f5bd3005fc50551aa7195b419994ca3e8